@@ -47,6 +47,7 @@ Note that the following bug and feature requests are logged in GForge with relat
 
 [#756] IRODSDataConversionUtil date should be null if no data in query result
 [#761] unregister collection recursively causes error when multiple subfolders
+[#768] -1202000 error executing rule via jargon - added unit test to capture reported bug
 
 ==Features==
 
